<resources>
    <string name="app_name">Wordle</string>
    <string name="word_game_title">Word Game</string>
    <string name="no_letter_in_words_title">No. of letter in a words</string>
    <string name="eight_title">8</string>
    <string name="seven_title">7</string>
    <string name="six_title">6</string>
    <string name="five_title">5</string>
    <string name="filter_title">Filter</string>

    <string name="test_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="client_main_app_id">ca-app-pub-5797286914124466~9442933109</string>
    <string name="client_main_unit_id">ca-app-pub-5797286914124466/2778286559</string>

    <string name="client_second_app_id">ca-app-pub-6566498055471913~9259658758</string>
    <string name="client_second_unit_id">ca-app-pub-6566498055471913/2535264461</string>

    <string name="validation_char">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="message">Please enter the seed word to start.</string>
    <string name="ok_title">OK</string>


</resources>