<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/app_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:context=".ui.home.HomeActivity">

            <TextView
                android:id="@+id/textView"
                style="@style/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/word_game_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_large"
                android:src="@drawable/ic_refresh"
                ads:layout_constraintBottom_toBottomOf="@+id/textView"
                ads:layout_constraintEnd_toEndOf="@+id/textView"
                ads:layout_constraintTop_toTopOf="@id/textView"
                ads:tint="@color/blue" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_xxxlarge" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_xxxlarge" />

            <TextView
                android:id="@+id/textView3"
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_letter_in_words_title"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3">

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_five"
                    style="@style/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/tab_selected_background"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/five_title"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    style="@style/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/tab_selected_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/six_title"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />


                <androidx.appcompat.widget.AppCompatRadioButton
                    style="@style/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/tab_selected_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/seven_title"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />


                <androidx.appcompat.widget.AppCompatRadioButton
                    style="@style/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/tab_selected_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/eight_title"
                    android:textColor="@color/tab_selected_color"
                    android:textColorHint="@color/white" />


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

            </RadioGroup>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/rg" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_word"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_filter"
                app:layout_constraintEnd_toEndOf="@id/guideline5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/rg" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_filter"
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/button_bg"
                android:paddingLeft="@dimen/padding_big"
                android:paddingTop="@dimen/padding_xlarge"
                android:paddingRight="@dimen/padding_big"
                android:paddingBottom="@dimen/padding_xlarge"
                android:text="@string/filter_title"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/rv_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_word" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_filter"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/recyclerview_background"
                android:padding="@dimen/padding_large"
                ads:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btn_filter" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            ads:adSize="BANNER"
            ads:adUnitId="@string/client_second_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</layout>